--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
+title: Chase Marsh
+description: 'Life. Tech. Music.git'
 url: 'https://www.chasemarsh.com'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
