--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Chase Marsh
-description: 'Life. Tech. Music.git'
+description: 'Life. Tech. Music.'
 url: 'https://www.chasemarsh.com'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
