--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: ''
 
 author:
   name: 'Chase Marsh'
-  email: cmarsh@gebcservices.com
+  email: 
   twitter_username: 
   facebook_username: 
   github_username:  ChaseMarsh
